--- a/HTML_Tables_01.html
+++ b/HTML_Tables_01.html
@@ -40,7 +40,7 @@
 	     </tr>
 	     <tr>
 	     	<td>AA104</td>
-	     	<td>Saumya Sinha</td>
+	     	<td>Saumya Dolly</td>
 	     	<td>50000</td>
 	     	<td>Developer</td>
 	     	<td>Apple</td>
